(fix): Added vertical alignment and removed color for anchor tag

--- a/src/assets/styles/scss/base/_reset.scss
+++ b/src/assets/styles/scss/base/_reset.scss
@@ -68,10 +68,7 @@ summary {
   margin: 0;
   padding: 0;
   font-size: 100%;
-}
-
-*:focus, :hover {
-  outline: none !important;
+  vertical-align: baseline;
 }
 
 /* Set block elements to display as block-level for consistent rendering */
@@ -121,10 +118,9 @@ q:after {
   content: none;
 }
 
-/* Optional: Customize link styles as needed */
+/* Removes Style from the anchor tags */
 a {
   text-decoration: none;
-  color: #000;
 }
 
 /* Set default font family, size, and line height */
